--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,11 @@
       src="https://kit.fontawesome.com/c764c2a2ce.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://windventory.s3.amazonaws.com/favicon.ico"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
