--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <title>windVentory</title>
     <script
       src="https://kit.fontawesome.com/c764c2a2ce.js"
