Minor styling changes

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,6 +23,24 @@
       href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
       rel="stylesheet"
     />
+    <meta property="og:title" content="windVentory" />
+    <meta name="twitter:title" content="windVentory" />
+
+    <meta
+      name="description"
+      content="Inventory tracking application utilizing Javascript, Python, React.js, Flask, Redux, and Socket.io. Windventory aims to decrease lost time, wasted materials, and the overall cost of large-scale blade repair jobs in the Wind Energy sector."
+    />
+    <meta
+      property="og:description"
+      content="Inventory tracking application utilizing Javascript, Python, React.js, Flask, Redux, and Socket.io. Windventory aims to decrease lost time, wasted materials, and the overall cost of large-scale blade repair jobs in the Wind Energy sector."
+    />
+    <meta
+      name="twitter:description"
+      content="Inventory tracking application utilizing Javascript, Python, React.js, Flask, Redux, and Socket.io. Windventory aims to decrease lost time, wasted materials, and the overall cost of large-scale blade repair jobs in the Wind Energy sector."
+    />
+
+    <meta property="og:image" content="https://i.imgur.com/a07u1pM.png" />
+    <meta name="twitter:image" content="https://i.imgur.com/a07u1pM.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
